yoshimi 1.5.0 M

2017-2-12 Will
* Separated out temporary Gui Write -> Read per section.
  This enables us to do conversions section by section.
* Improved Cli messaging.
* Re-implemented silent panic stop.
* Re-implimented soft master reset. Hopefully all OK now.

2017-2-11 Will
* Reverted unsafe changes from build 952.
* Small optimisation in main audio loop partonoff read.
* A few Gui tidy-ups.
* Mixer as well as main window now show current patchset.
* Cautious 2nd attempt at just soft patchset change.

2017-2-9 Will
* Global and part keyshifts now go through ringbuffer.
* Code tidy-ups and improved comments.
* Bugfix: Part kitlist wasn't deactivated on start.
* All sources now use ringbuffer to load patchsets.
* Bugfix: Segfault if reset from CLI while GUI running.

2017-2-8 Will
* Commented out redundant code from LV2.
* Added mlock to all ring buffers.
* Ensured all locked pages unlocked on exit.

2017-2-7 Will
* First trial of async MIDI buffer.
* Changed miscMsg from mutext to semaphore.
* Bugfix: miscMsg buffer not being cleared.
  Only when no GUI. That was supposed to get them!
* Bugfix: Return messages killed for CLI when disabled
  for Gui.

2017-2-4 Will
* Changed interpolation for part volume and pan
  so no more zipper noise.
* Removed unused and commented out code.
* Corrected code copyright and 'Modified' dates.
* Bugfix: FLTK choice windows gave "yes" on Escape.
* Bugfix: Regression when loading vectors from CLI
  would crash if no channel given :(
* Bugfix: GUI not updated on loading vector file.

2017-2-3 Will
* Applied AddSynth Voice tooltip patch from Rob.
* Main volume now interpolated. No zipper noise :)

2017-2-2 Will
* Midi learn files now include the text of the
  command name for each line.
* Removed remaining forced 'part enable' except in part.
* Improved and extended partonoff options.
* 'Set part to default' now uses new method.
  Direct CLI access and the GUI now do this silently.
* Updated docs.

2017-2-1 Will